--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@types/express": "^4.17.3",
+    "@types/js-yaml": "^3.12.2",
+    "@types/swagger-ui-express": "^4.1.1",
     "express": "^4.17.1",
+    "js-yaml": "^3.13.1",
+    "swagger-ui-express": "^4.1.3",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
   },
