--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,27 @@
     "configurations": [
         {
             "type": "node",
+            "request": "launch",
+            "name": "Mocha Tests",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "args": [
+                "-r",
+                "ts-node/register",
+                "-u",
+                "bdd",
+                "--timeout",
+                "999999",
+                "--colors",
+                "--exit",
+                "${workspaceFolder}/test/**/*.ts"
+            ],
+            "internalConsoleOptions": "openOnSessionStart",
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        },
+        {
+            "type": "node",
             "runtimeVersion": "12.16.1",
             "request": "launch",
             "name": "Launch",
@@ -21,5 +42,5 @@
             "internalConsoleOptions": "openOnSessionStart",
             "outputCapture": "std"
         }
-   ]
+    ]
 }
