--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node -r ts-node/register src",
     "start-dev": "ts-node-dev --respawn --transpileOnly --inspect -- src/index.ts",
-    "test": "MOCHAWESOME_REPORTDIR=test-results nyc mocha -r ts-node/register --reporter mochawesome --exit test/**/*.ts"
+    "test": "MOCHAWESOME_REPORTDIR=test-results nyc mocha -r ts-node/register --reporter mochawesome --exit test/**/*.ts",
+    "generate-definitions": "ts-node src/scripts/generateDefinitions.ts"
   },
   "keywords": [],
   "author": "Joachim Schirrmacher",
@@ -14,7 +15,9 @@
     "@types/express": "^4.17.3",
     "@types/js-yaml": "^3.12.2",
     "@types/swagger-ui-express": "^4.1.1",
+    "dtsgenerator": "^2.5.0",
     "express": "^4.17.1",
+    "express-openapi": "^6.0.0",
     "js-yaml": "^3.13.1",
     "swagger-ui-express": "^4.1.3",
     "ts-node": "^8.6.2",
